k8s/patches/dev/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nginx-gateway
spec:
  gatewayClassName: nginx
  listeners:
    - name: example-visoft-dev-http
      protocol: HTTP
      port: 80
      hostname: example.visoft.dev
    - name: example-visoft-dev-https
      protocol: HTTPS
      port: 443
      hostname: example.visoft.dev
      tls:
        certificateRefs:
          - kind: Secret
            name: example-visoft-dev-tls
