k8s/patches/dev/routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example
spec:
  parentRefs:
    - kind: Gateway
      name: istio-gateway
      namespace: istio-gateway
  hostnames:
    - example.visoft.dev
  rules:
    - matches:
      backendRefs:
        - name: example
          port: 80
